// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E - react Monorepo project Installs react package 1`] = `
"$ /tmp/test-react/monorepo-project/node_modules/.bin/ts-dev-tools install
Installing @ts-dev-tools/core...
Applying migration \\"20201024173398-init\\"...
Migration \\"20201024173398-init\\" applied!
Applying migration \\"20201111162698-init\\"...
Migration \\"20201111162698-init\\" applied!
Checking for duplicate dev dependencies...
Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Monorepo project Installs react package 2`] = `
Object {
  "commitlint": Object {
    "extends": Array [
      "@commitlint/config-conventional",
    ],
  },
  "devDependencies": Object {
    "@ts-dev-tools/react": "file:/tmp/test-react/tmp-packages/packages/react",
    "typescript": "^4.6.2",
  },
  "eslintConfig": Object {
    "env": Object {
      "browser": true,
      "es2021": true,
    },
    "extends": Array [
      "eslint:recommended",
      "plugin:@typescript-eslint/recommended",
      "plugin:jest/recommended",
      "plugin:react/recommended",
      "prettier",
    ],
    "parser": "@typescript-eslint/parser",
    "parserOptions": Object {
      "ecmaFeatures": Object {
        "jsx": true,
      },
      "ecmaVersion": 12,
      "sourceType": "module",
    },
    "plugins": Array [
      "@typescript-eslint",
      "jest",
    ],
    "root": true,
    "rules": Object {
      "react/jsx-uses-react": "off",
      "react/react-in-jsx-scope": "off",
    },
    "settings": Object {
      "jest": Object {
        "version": "detect",
      },
      "react": Object {
        "version": "detect",
      },
    },
  },
  "importSort": Object {
    ".js, .jsx, .ts, .tsx": Object {
      "parser": "typescript",
      "style": "module",
    },
  },
  "jest": Object {
    "preset": "ts-jest",
    "testEnvironment": "jsdom",
    "testMatch": Array [
      "**/__tests__/**/*.[jt]s?(x)",
      "**/?(*.)+(spec|test)?(.*).+(ts|tsx|js)",
    ],
  },
  "license": "MIT",
  "lint-staged": Object {
    "*.{js,ts,tsx}": Array [
      "eslint --fix",
    ],
  },
  "main": "index.js",
  "name": "monorepo-project",
  "prettier": Object {
    "printWidth": 100,
    "semi": true,
    "trailingComma": "es5",
  },
  "private": true,
  "scripts": Object {
    "build": "tsc --noEmit",
    "format": "prettier --write '**/*.js'",
    "jest": "jest --detectOpenHandles --forceExit",
    "lint": "eslint \\"src/**/*.{ts,tsx}\\"",
    "prepare": "ts-dev-tools install",
    "test": "yarn jest --maxWorkers=50%",
    "test:ci": "yarn test:cov --runInBand",
    "test:cov": "yarn jest --coverage",
    "test:watch": "yarn jest --watch --maxWorkers=25%",
  },
  "tsDevTools": Object {
    "version": "20201111162698-init",
  },
  "version": "1.0.0",
  "workspaces": Array [
    "packages/*",
  ],
}
`;

exports[`E2E - react Simple project Installs react package 1`] = `
"$ /tmp/test-react/simple-project/node_modules/.bin/ts-dev-tools install
Installing @ts-dev-tools/core...
Applying migration \\"20201024173398-init\\"...
Migration \\"20201024173398-init\\" applied!
Applying migration \\"20201111162698-init\\"...
Migration \\"20201111162698-init\\" applied!
Checking for duplicate dev dependencies...
Check for duplicate dev dependencies done!
Installation done!"
`;

exports[`E2E - react Simple project Installs react package 2`] = `
Object {
  "browserslist": Object {
    "development": Array [
      "last 1 chrome version",
      "last 1 firefox version",
      "last 1 safari version",
    ],
    "production": Array [
      ">0.2%",
      "not dead",
      "not op_mini all",
    ],
  },
  "commitlint": Object {
    "extends": Array [
      "@commitlint/config-conventional",
    ],
  },
  "dependencies": Object {
    "@testing-library/jest-dom": "^5.14.1",
    "@testing-library/react": "^12.0.0",
    "@testing-library/user-event": "^13.2.1",
    "@types/jest": "^27.0.1",
    "@types/node": "^16.7.13",
    "@types/react": "^17.0.20",
    "@types/react-dom": "^17.0.9",
    "react": "^17.0.2",
    "react-dom": "^17.0.2",
    "react-scripts": "5.0.0",
    "typescript": "^4.4.2",
    "web-vitals": "^2.1.0",
  },
  "devDependencies": Object {
    "@ts-dev-tools/react": "file:/tmp/test-react/tmp-packages/packages/react",
  },
  "eslintConfig": Object {
    "env": Object {
      "browser": true,
      "es2021": true,
    },
    "extends": Array [
      "react-app",
      "react-app/jest",
      "eslint:recommended",
      "plugin:@typescript-eslint/recommended",
      "plugin:jest/recommended",
      "plugin:react/recommended",
      "prettier",
    ],
    "parser": "@typescript-eslint/parser",
    "parserOptions": Object {
      "ecmaFeatures": Object {
        "jsx": true,
      },
      "ecmaVersion": 12,
      "sourceType": "module",
    },
    "plugins": Array [
      "@typescript-eslint",
      "jest",
    ],
    "root": true,
    "rules": Object {
      "react/jsx-uses-react": "off",
      "react/react-in-jsx-scope": "off",
    },
    "settings": Object {
      "jest": Object {
        "version": "detect",
      },
      "react": Object {
        "version": "detect",
      },
    },
  },
  "importSort": Object {
    ".js, .jsx, .ts, .tsx": Object {
      "parser": "typescript",
      "style": "module",
    },
  },
  "jest": Object {
    "preset": "ts-jest",
    "testEnvironment": "jsdom",
    "testMatch": Array [
      "**/__tests__/**/*.[jt]s?(x)",
      "**/?(*.)+(spec|test)?(.*).+(ts|tsx|js)",
    ],
  },
  "lint-staged": Object {
    "*.{js,ts,tsx}": Array [
      "eslint --fix",
    ],
  },
  "name": "simple-project",
  "prettier": Object {
    "printWidth": 100,
    "semi": true,
    "trailingComma": "es5",
  },
  "private": true,
  "scripts": Object {
    "build": "tsc --noEmit",
    "eject": "react-scripts eject",
    "format": "prettier --write '**/*.js'",
    "jest": "jest --detectOpenHandles --forceExit",
    "lint": "eslint \\"src/**/*.{ts,tsx}\\"",
    "prepare": "ts-dev-tools install",
    "start": "react-scripts start",
    "test": "yarn jest --maxWorkers=50%",
    "test:ci": "yarn test:cov --runInBand",
    "test:cov": "yarn jest --coverage",
    "test:watch": "yarn jest --watch --maxWorkers=25%",
  },
  "tsDevTools": Object {
    "version": "20201111162698-init",
  },
  "version": "0.1.0",
}
`;
